fix optional whitespace

--- a/test/cases/messed-up.css
+++ b/test/cases/messed-up.css
@@ -1,4 +1,15 @@
-body{foo:'bar'}
-    this is really
-    { terrible:
-      'css'}
+body { foo
+  :
+  'bar' }
+
+   body{foo:bar;bar:baz}
+   body
+   {
+     foo
+     :
+     bar
+     ;
+     bar
+     :
+     baz
+     }
